--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -11,12 +11,8 @@
                 </div>
                 <div class="shrink cell show-for-large">
                     <nav class="banner__nav">
-                        <ul class="menu dropdown menu--main" data-dropdown-menu data-click-open="true" data-disable-hover="true"><li class="menu-item menu-about"><a href="https://brickvisual.com/about/">About</a></li>
-                            <li class="menu-item menu-works"><a href="https://brickvisual.com/portfolio/">Works</a></li>
-                            <li class="menu-item menu-services"><a href="https://brickvisual.com/services/">Services</a></li>
-                            <li class="menu-item menu-newsroom"><a href="https://brickvisual.com/newsroom/">Newsroom</a></li>
-                            <li class="menu-item menu-academy"><a href="https://brickvisual.com/academy/">Academy</a></li>
-                            <li class="menu-item menu-contact"><a href="https://brickvisual.com/contact/">Contact</a></li>
+                        <ul class="menu dropdown menu--main" data-dropdown-menu data-click-open="true" data-disable-hover="true">
+                            <li class="menu-item accent"><a href="https://brickvisual.com/about/">Download PDF version</a></li>
                         </ul>
                     </nav>
                 </div>
