--- a/src/assets/scss/layouts/_banner.scss
+++ b/src/assets/scss/layouts/_banner.scss
@@ -26,7 +26,7 @@
 }
 
 .banner__top {
-    border-bottom:1px solid transparent;
+    border-bottom:1px solid $medium-gray;
     transition: top .4s ease-in;
 }
 
