--- a/src/assets/scss/layouts/_footer.scss
+++ b/src/assets/scss/layouts/_footer.scss
@@ -1,14 +1,14 @@
 .sitefooter {
-    // border-top:1px solid $xlight-gray;
-    position: static;
-    padding:.5rem 0;
+    border-top:1px solid $medium-gray;
+    position: fixed;
+    padding:.666rem 0;
     bottom:0;
     left:0;
     width:100%;
     // position: relative;
     background: $body-background;
     font-size: .875rem;
-    font-weight: $global-weight-medium;
+    // font-weight: $global-weight-medium;
     p {
         margin-bottom: .5em;
         @include breakpoint(tablet) {
@@ -18,22 +18,6 @@
     .no-footer & {
         display: none;
     }
-    @include breakpoint(tablet) {
-        position: fixed;
-    }
-    @media (min-aspect-ratio: 72/44) {
-        & {
-           display: none;
-
-        }
-    }
-    @media (min-aspect-ratio: 72/46) and (max-width: 1200px){
-        & {
-           display: none;
-
-        }
-    }
-    
 }
 
 .sitefooter__separator {
