--- a/src/partials/versiondesktop.html
+++ b/src/partials/versiondesktop.html
@@ -1,70 +1,53 @@
-<div class="fordesktoponly show-for-large paceshow">
+<div class="paceshow">
     <div class="carouselwrap">
         <button type="button" class="slick-arrow slick-prev"><svg class="icon">
                 <use xlink:href="#icon-caret-left"></use>
             </svg></button>
-        <div class="grid-container">
+        <div class="grid-container stretched">
             <div class="homecarousel slick-slider">
                 {{#each slides}}
-                <div>
+                <div class="citemwrap">
                     <div class="citem">
-                        {{#if info}}
-                        <aside class="ipanel">
-                            <header class="ipanel__header">
-                                <h3>{{ title }}</h3>
-                                <p>{{ date }}</p>
-                            </header>
-                            <div class="ipanel__details">
-                                <h4>Project info</h4>
-                                <p>{{ info }}</p>
-                                <h4>Client</h4>
-                                <p class="ipanel__moreworks"><a href="https://brickvisual.com/portfolio/">+ more
-                                        works</a></p>
-                                <p class="ipanel__details__client">{{ client }}</p>
+                        {{#if video}}
+                            <div class="rightstretched">
+                                <video width="{{ img_width }}" height="{{ img_height }}" muted loop preload poster="{{root}}assets/img/slides/{{ img }}">
+                                    <source src="{{root}}assets/img/slides/{{ video }}" type="video/mp4">
+                                    <source src="{{root}}assets/img/slides/medium/{{ video }}" type="video/mp4" media="all and (max-width: 1024px)">
+                                </video>
                             </div>
-                        </aside>
+                            <div class="leftstretched">
+                                <img width="{{ img_width }}" height="{{ img_height }}"
+                                src="https://via.placeholder.com/1200x800/ffffff?text={{ title }}" alt="{{ title }}">
+                            </div>
                         {{/if}}
-                        <figure data-title="{{ title }}" data-description="{{ client }}">
-                            <a href="{{ url }}">
-                                {{#if video}}
-                                    <video width="{{ img_width }}" height="{{ img_height }}" muted loop preload poster="{{root}}assets/img/slides/{{ img }}">
-                                        <source src="{{root}}assets/img/slides/{{ video }}" type="video/mp4">
-                                        <source src="{{root}}assets/img/slides/medium/{{ video }}" type="video/mp4" media="all and (max-width: 1024px)">
-                                    </video>
-                                {{/if}}
-                                {{#unless video}}
-                                    <img width="{{ img_width }}" height="{{ img_height }}"
-                                    src="{{root}}assets/img/slides/medium/{{ img }}" alt="{{ title }}"
-                                    srcset="{{root}}assets/img/slides/{{ img }} {{ img_width }}w">
-                                {{/unless}}
-
-                            </a>
-                            {{#if figcaption}}
-                            <figcaption>
-                                {{figcaption}}{{#if subcaption}}<em>{{subcaption}}</em>{{/if}}
-                            </figcaption>
-                            {{/if}}
-                        </figure>
+                        {{#unless video}}
+                            <div class="rightstretched">
+                            <img width="{{ img_width }}" height="{{ img_height }}"
+                            src="https://via.placeholder.com/1200x800/ffffff?text={{ title }}" alt="{{ title }}">
+                            </div>
+                            <div class="leftinner">
+                                <img width="{{ img_width }}" height="{{ img_height }}"
+                                src="{{root}}assets/img/slides/medium/{{ img }}" alt="{{ title }}"
+                                srcset="{{root}}assets/img/slides/{{ img }} {{ img_width }}w">
+                            </div>
+                        {{/unless}}
                     </div>
                 </div>
                 {{/each}}
-                <div>
+                <div class="citemwrap">
                     <div class="citem">
-                        <figure>
+                        <div>
                             <a class="desktopportfoliojump" href="https://brickvisual.com/portfolio/">+ more works</a>
-                        </figure>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <button type="button" class="slick-arrow slick-next"><svg class="icon">
+        <button type="button" class="slick-arrow slick-next">
+            <svg class="icon">
                 <use xlink:href="#icon-caret-right"></use>
-            </svg></button>
-    </div>
-    <div class="grid-container">
-        <h3 class="carouselstatus">
-            <!-- Lorem ipsum dolor sit amet<em>lorem ipsum</em> -->
-        </h3>
+            </svg>
+        </button>
     </div>
 
     <div class="navcarousel">
