--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -1,24 +1,25 @@
 <header class="banner paceshow" data-sticky-container>
     <div class="banner__top" data-sticky data-sticky-on="small" data-options="marginTop:0;">
         <div class="grid-container" data-aos="fade-down" data-aos-delay="200">
-            <div class="grid-x grid-margin-x align-middle">
-                <div class="auto cell">
+            <div class="grid-x grid-margin-x align-middle align-justify">
+                <div class="shrink cell">
                     <div class="banner__branding">
                         <a class="brand" href="{{root}}">
                             <img class="brand__fulllogo" src="{{root}}assets/img/brick_communicating_architecture.svg" alt="Brick Visual | Communicating Architecture">
                         </a>
                     </div>
                 </div>
-                <div class="shrink cell show-for-large">
+                <div class="auto cell show-for-tablet text-center">
+                    <h3 class="banner__title">Portfolio <span>2021</span></h3>
+                </div>
+                <div class="shrink cell">
                     <nav class="banner__nav">
                         <ul class="menu dropdown menu--main" data-dropdown-menu data-click-open="true" data-disable-hover="true">
                             <li class="menu-item accent"><a href="https://brickvisual.com/about/">Download PDF version</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="shrink cell hide-for-large">
-                    <button class="menutoggler" type="button" style="margin-top:0" data-toggle="mobilemodal"></button>
-                </div>
+
             </div>
         </div>
     </div>
