--- a/src/assets/scss/components/_slick.scss
+++ b/src/assets/scss/components/_slick.scss
@@ -1,7 +1,7 @@
 .carouselwrap {
     position: relative;
     display: flex;
-    height: calc(100vh - 12rem)
+    height: calc(100vh - 13rem)
 }
 .carouselstatus {
     padding:0 10%;
@@ -48,7 +48,7 @@
 .homecarousel {
     position: relative;
 
-    box-shadow: 0 0 1.5rem 0 rgba(#000, 0.1);
+    box-shadow: 0 0 1.666rem .333rem rgba(#000, 0.1);
 
     // transition: transform .4s ease-in;
     // transform: translate3d(0, 0, 0);
@@ -94,11 +94,11 @@
         outline: none;
     }
     img {
-        height: 4rem;
+        height: 5rem;
         // min-height: 5rem;
         max-width: none;
         width: auto;
-        opacity: .5;
+        opacity: .333;
         display: block;
         
     }
