--- a/src/partials/versiondesktop.html
+++ b/src/partials/versiondesktop.html
@@ -8,29 +8,39 @@
                 {{#each slides}}
                 <div class="citemwrap">
                     <div class="citem">
-                        {{#if video}}
-                            <div class="rightstretched">
-                                <video width="{{ img_width }}" height="{{ img_height }}" muted loop preload poster="{{root}}assets/img/slides/{{ img }}">
-                                    <source src="{{root}}assets/img/slides/{{ video }}" type="video/mp4">
-                                    <source src="{{root}}assets/img/slides/medium/{{ video }}" type="video/mp4" media="all and (max-width: 1024px)">
-                                </video>
-                            </div>
-                            <div class="leftstretched">
-                                <img width="{{ img_width }}" height="{{ img_height }}"
-                                src="https://via.placeholder.com/1200x800/ffffff?text={{ title }}" alt="{{ title }}">
-                            </div>
-                        {{/if}}
-                        {{#unless video}}
-                            <div class="rightstretched">
-                            <img width="{{ img_width }}" height="{{ img_height }}"
-                            src="https://via.placeholder.com/1200x800/ffffff?text={{ title }}" alt="{{ title }}">
-                            </div>
-                            <div class="leftinner">
-                                <img width="{{ img_width }}" height="{{ img_height }}"
-                                src="{{root}}assets/img/slides/medium/{{ img }}" alt="{{ title }}"
-                                srcset="{{root}}assets/img/slides/{{ img }} {{ img_width }}w">
-                            </div>
-                        {{/unless}}
+                        {{#each this}}
+                        <div class="{{ class }}">
+                            {{#if copy}}
+                                <a href="#">
+                                    <img src="{{ copy }}?text={{ title }}" alt="{{ title }}">
+                                </a>
+                            {{/if}}
+                            {{#unless copy}}
+                                {{#if video}}
+                                    <a href="#">
+                                        <video muted loop preload poster="{{root}}assets/img/slides/{{ img }}">
+                                            <source src="{{root}}assets/img/slides/{{ video }}" type="video/mp4">
+                                            <source src="{{root}}assets/img/slides/medium/{{ video }}" type="video/mp4" media="all and (max-width: 1024px)">
+                                        </video>
+                                    </a>
+                                {{/if}}
+                                {{#unless video}}
+                                    {{#if vimeo}}
+                                    <a class="videolink" href="{{ vimeo }}">    
+                                        <img src="{{root}}assets/img/slides/medium/{{ img }}" alt="{{ title }}"
+                                        srcset="{{root}}assets/img/slides/{{ img }} {{ img_width }}w">
+                                    </a>
+                                    {{/if}}
+                                    {{#unless vimeo}}
+                                    <a href="#">    
+                                        <img src="{{root}}assets/img/slides/medium/{{ img }}" alt="{{ title }}"
+                                        srcset="{{root}}assets/img/slides/{{ img }} {{ img_width }}w">
+                                    </a>
+                                    {{/unless}}
+                                {{/unless}}
+                            {{/unless}}
+                        </div>
+                        {{/each}}
                     </div>
                 </div>
                 {{/each}}
@@ -54,8 +64,7 @@
         {{#each slides}}
         <div>
             <figure>
-                <img width="{{ img_width }}" height="{{ img_height }}" src="{{root}}assets/img/slides/medium/{{ img }}"
-                    alt="{{ title }}" srcset="{{root}}assets/img/slides/{{ img }} {{ img_width }}w">
+                <img src="https://via.placeholder.com/600x203/9b9b9b/ffffff?text=thumb+0{{ @index }}">
             </figure>
         </div>
         {{/each}}
