--- a/src/assets/scss/components/_citem.scss
+++ b/src/assets/scss/components/_citem.scss
@@ -29,7 +29,7 @@
     background-color: #fff;
 
     display: grid;
-    grid-template-columns: $mirrormargin #{50% - $mirrormargin*2} $mirrormargin $mirrormargin #{50% - $mirrormargin*2} $mirrormargin;
+    grid-template-columns: $mirrormargin 33.333333% #{16.666667% - $mirrormargin*2} $mirrormargin $mirrormargin #{16.666667% - $mirrormargin*2} 33.333333% $mirrormargin;
     grid-template-rows: #{$mirrormargin*$mirrorratio} #{100% - $mirrormargin*$mirrorratio*2} #{$mirrormargin*$mirrorratio};
 
 
@@ -37,36 +37,69 @@
         content: '';
         display: block;
         position: absolute;
-        left:0; top:0;
-        width:100%; height:100%;
-        // background-color: rgba($primary-color,.5);
-        background-image: linear-gradient(90deg, rgba(#000, 0) 30% , rgba(#000,.05) 45%, rgba(#000,.1) 50%, rgba(#000,.0666) 50% rgba(#000, 0.025) 55%, rgba(#000, 0) 70% );
+        left:20%; top:0;
+        width:60%; height:100%;
+        background-image: linear-gradient(90deg, rgba(#000, 0) 0 , rgba(#000,.05) 40%, rgba(#000,.1) 50%, rgba(#000,.0666) 50% rgba(#000, 0.025) 60%, rgba(#000, 0) 100% );
         pointer-events: none;
+    }
+
+    &.noshadow {
+        &:after {
+            display: none;
+        }
     }
 
 
     > div {
-        grid-column: 1 / span 6;
+        grid-column: 1 / span 8;
         grid-row: 1 / span 3;
         
         &.leftstretched {
-            grid-column: 1 / span 3;
+            grid-column: 1 / span 4;
             grid-row: 1 / span 3;
+            &.wide {
+                grid-column-end: span 6;
+            }
+            &.narrow {
+                grid-column-end: span 2;
+            }
         }
     
         &.rightstretched {
-            grid-column: 4 / span 3;
+            grid-column: 5 / span 4;
             grid-row: 1 / span 3;
+            &.wide {
+                grid-column-start: 3;
+                grid-column-end: span 6;
+            }
+            &.narrow {
+                grid-column-start: 7;
+                grid-column-end: span 2;
+            }
         }
     
         &.leftinner {
-            grid-column: 2 / span 1;
+            grid-column: 2 / span 2;
             grid-row: 2 / span 1;
+            &.wide {
+                grid-column-end: span 5;
+            }
+            &.narrow {
+                grid-column-end: span 1;
+            }
         }
     
         &.rightinner {
-            grid-column: 5 / span 1;
+            grid-column: 6 / span 2;
             grid-row: 2 / span 1;
+            &.wide {
+                grid-column-start: 3;
+                grid-column-end: span 5;
+            }
+            &.narrow {
+                grid-column-start: 7;
+                grid-column-end: span 1;
+            }
         }
     }
 
