--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -46,7 +46,7 @@
 {{> body}}
 {{> sitefooter }}
 <!-- </div> -->
-{{> mobilemodal }}
+{{> pswp }}
 {{> icons }}
 <script src="{{root}}assets/js/app.js"></script>
 </body>
