--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -36,6 +36,7 @@
         // }
         position: relative;
         font-size: 0.875rem;
+        transition: .2s all ease-in;
 
         padding: 0.25em 0.875em 0.25em !important;
         //background-color: red;
