--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -10,7 +10,7 @@
                     </div>
                 </div>
                 <div class="auto cell show-for-tablet text-center">
-                    <h3 class="banner__title">Portfolio <span>2021</span></h3>
+                    <h3 class="banner__title"><a href="#" class="js-restartslideshow">Portfolio <span>2021</span></a></h3>
                 </div>
                 <div class="shrink cell">
                     <nav class="banner__nav">
