--- a/src/assets/scss/components/_slick-theme.scss
+++ b/src/assets/scss/components/_slick-theme.scss
@@ -73,7 +73,7 @@ $slick-opacity-not-active: 0.25 !default;
     cursor: pointer;
     background: transparent;
     color: transparent;
-    top: 50%;
+    top: calc(50% - 3rem);
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
