--- a/src/assets/scss/global/_base.scss
+++ b/src/assets/scss/global/_base.scss
@@ -59,7 +59,7 @@ body {
         padding-left:0;
         padding-right:0;
         width:100%;
-        margin: auto auto;
+        margin: 0 auto;
     }
 }
 
