--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brick Visual - Communicating Architecture</title>
+    <title>Brick Visual - Portfolio 2021</title>
     <link rel="preload" href="{{root}}assets/js/loader.js" as="script">
     <link rel="preload" href="{{root}}assets/js/app.js" as="script">
     <link rel="preload" href="{{root}}assets/css/app.css" as="style">
@@ -16,7 +16,7 @@
 	<meta name="robots" content="index, follow" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Brick Visual - Communicating Architecture" />
+	<meta property="og:title" content="Brick Visual - Portfolio 2021" />
 	<meta property="og:description" content="Brick Visual is a high-end architectural visualization company, delivering engaging architectural visualization still images, movies and AR/VR solutions." />
 	<meta property="og:url" content="https://brickvisual.com/" />
     <meta property="og:site_name" content="Brick Visual" />
