--- a/src/assets/scss/components/_slick.scss
+++ b/src/assets/scss/components/_slick.scss
@@ -1,15 +1,20 @@
+.ccwrap {
+    // position: relative;
+    // display: flex;
+    display: flex;
+    min-height: calc(100vh - 5.5rem);
+}
 .carouselwrap {
     position: relative;
-    display: flex;
-    height: calc(100vh - 10rem)
+    margin:auto 0;
+    width: 100%;
+
+    // min-height: calc(100vh - 5.5rem)
 }
 .carouselstatus {
-    position: absolute;
-    left: 0;
-    top:50%;
-    margin-top:17%;
+    margin:1rem 0;
     width:100%;
-    padding:0 10%;
+    padding:.5vw 10% .25vw;
     text-align: center;
     color:$darker-gray2;
 
@@ -24,7 +29,7 @@
     opacity: 1;
 
     @media screen and (min-width: 110em) {
-        margin-top:18.5rem;
+        // margin-top:18.5rem;
     }
 
     em {
@@ -46,7 +51,7 @@
 
 .homecarousel {
     position: relative;
-
+    z-index: 1;
     box-shadow: 0 0 1.666rem .333rem rgba(#000, 0.1);
 
     // transition: transform .4s ease-in;
@@ -72,14 +77,15 @@
 
 .navcarousel {
     background-color: $body-background;
-    position: fixed;
-    bottom: 4.666rem;
-    left:0;
     width:100%;
     padding: .25vw 0;
 
     @include breakpoint(tablet) {
-        bottom: 3rem;
+
+    }
+
+    @media screen and (min-width: 110em) {
+
     }
 
     .slick-slide {
