--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -1,7 +1,7 @@
 <header class="banner aaapaceshow" data-sticky-container>
     <div class="banner__top" data-sticky data-sticky-on="small" data-options="marginTop:0;">
         <div class="grid-container" data-aos="fade-down" data-aos-delay="200">
-            <div class="grid-x grid-margin-x align-middle align-justify">
+            <div class="banner__toprow grid-x grid-margin-x align-middle align-justify">
                 <div class="shrink cell">
                     <div class="banner__branding">
                         <a class="brand" href="{{root}}">
