--- a/src/assets/scss/components/_slick.scss
+++ b/src/assets/scss/components/_slick.scss
@@ -2,14 +2,14 @@
     // position: relative;
     // display: flex;
     display: flex;
-    min-height: calc(100vh - 5.5rem);
+    min-height: calc(100vh - 9rem);
 }
 .carouselwrap {
     position: relative;
     margin:auto 0;
     width: 100%;
 
-    // min-height: calc(100vh - 5.5rem)
+    // min-height: calc(100vh - 9rem)
 }
 .carouselstatus {
     margin:1rem 0;
@@ -79,6 +79,8 @@
     background-color: $body-background;
     width:100%;
     padding: .25vw 0;
+    // position: absolute;
+    // top:100%;
 
     @include breakpoint(tablet) {
 
