--- a/src/assets/scss/layouts/_footer.scss
+++ b/src/assets/scss/layouts/_footer.scss
@@ -20,6 +20,10 @@
     }
 }
 
+.sitefooter__row {
+    min-height: 3rem;
+}
+
 .sitefooter__separator {
     //border-top:1px solid $dark-gray;
     margin-bottom: 1.25em;
