--- a/src/partials/sitefooter.html
+++ b/src/partials/sitefooter.html
@@ -1,6 +1,6 @@
 <footer class="sitefooter aaapaceshow" role="contentinfo">
     <div class="grid-container ">
-        <div class="grid-x grid-margin-x align-middle">
+        <div class="sitefooter__row grid-x grid-margin-x align-middle">
             <div class="cell small-12 tablet-shrink text-center tablet-text-left">
                 <p>
                     &copy; 2012-2021 Brick Visual Solutions Zrt. All Rights Reserved.
