--- a/src/assets/scss/components/_slick.scss
+++ b/src/assets/scss/components/_slick.scss
@@ -102,12 +102,17 @@
     }
     img {
         max-height: 5rem;
-        height: calc(1.5rem + 2vw);
+        height: calc(1.75rem + 2vw);
         // min-height: 5rem;
         max-width: none;
         width: auto;
         opacity: .333;
         display: block;
+        transition: all .2s ease-in;
+        &:hover, &:focus {
+            cursor: pointer;
+            opacity: .875;
+        }
         
     }
     .slick-current img {
