--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brick Visual - Portfolio 2021</title>
-    <link rel="preload" href="{{root}}assets/js/loader.js" as="script">
+    <!-- <link rel="preload" href="{{root}}assets/js/loader.js" as="script"> -->
     <link rel="preload" href="{{root}}assets/js/app.js" as="script">
     <link rel="preload" href="{{root}}assets/css/app.css" as="style">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
