--- a/src/assets/scss/components/_photoswipe.scss
+++ b/src/assets/scss/components/_photoswipe.scss
@@ -17,7 +17,7 @@
         display: inline-block;
         vertical-align: middle;
         margin: 0 auto;
-        text-align: left;
+        text-align: center;
         z-index: 1045;
         max-width: calc(177.777vh - 18rem );
         border:.5rem solid #fff;
